# StealthCup2025

./: .gitignore  Blog-WazuhDetections.md  KillChain - team2.drawio  KillChain - team6.drawio  KillChain.drawio  README.md  TTPs.md  local_rules.xml  suricata_custom.rules
LDAPQueryLogParser/: Write-LDAPQueryLog.ps1
dataset/: README.md  attack_vectors.yaml  build_dataset_run_index.sh  build_dataset_run_table.py  dataset_run_index.md  dataset_run_index.yaml  first_kali_interaction.sql  get_kali_queries.py  hosts.yaml  ids.yaml  stealthcup_dataset.yaml
docs/: Attack_Chains.md  Attack_Walkthrough.md
docs/ScientificApplication/: Comparison_VoltTyphoon.xlsx  Comparison_VoltTyphoon_felix_manuel.xlsx  ManualDetectionEvaluation.xlsx  PaperNB.ipynb  StealthCup_Timeline.xlsx  TTPs.md  eval.md
docs/Wazuh-Detections/: Blog-WazuhDetections.md
docs/Writeups/: team_01_microwoft_secuwurty_16-35.md  team_03_shaheen_17-19.md  (+10 more)
keepass-cve-2023-32784/: README.md  go.mod  main-encrypted.go.old
provisioning/: aws_firewall.rules  create_amis.py  create_firewall_rules.py  taint.py
scripts/: write_coil.py
scripts/redeploy/: README.md  pyproject.toml
scripts/redeploy/src/redeploy/: __main__.py
testing/: noise.sh  testinglog.md  tests.sh
windows-guests/: DetectionToolSet.psm  LDAPQueryLogParserSetup.md  README.md  check-filelock.ps1  client_attack.ps1  local_internal_options.conf  oss.conf
windows-setup/: README.md  settings.json  setup-CLI1.CORP.LOCAL.ps1  setup-DC1.CORP.LOCAL.ps1  setup-DC1.CORP.OT.ps1  setup-FS1.CORP.LOCAL.ps1  setup-JUMP.CORP.OT.ps1  utils.psm1
(+426 files in other folders)
